[PNPG-243] fix: added null check in OnboardingResourceMapper